@@ -230,16 +230,20 @@ enum EMUCMD
 	EMUCMD_MISC_DISPLAY_OBJ_TOGGLE,
 	EMUCMD_MISC_DISPLAY_LAGCOUNTER_TOGGLE,
 	EMUCMD_MISC_LAGCOUNTER_RESET,
-	EMUCMD_TOOL_OPENMEMORYWATCH, //Windows only (currently)
+	//Currently Windows only------
+	EMUCMD_TOOL_OPENMEMORYWATCH, 
+	EMUCMD_TOOL_OPENCHEATS,
 	EMUCMD_TOOL_OPENDEBUGGER,
 	EMUCMD_TOOL_OPENHEX,
 	EMUCMD_TOOL_OPENPPU,
 	EMUCMD_TOOL_OPENTRACELOGGER,
 	EMUCMD_TOOL_OPENCDLOGGER,
+	//----------------------------
 	EMUCMD_FRAMEADV_SKIPLAG,
+	//Currently only windows (but sdl could easily add onto these)
 	EMUCMD_OPENROM,
 	EMUCMD_CLOSEROM,
-
+	//-----------------------------
 	EMUCMD_MAX
 };
 
